kustomize/spec-app/base/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spec-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # ingressClassName: nginx
  rules:
    - host: "app.durgasri.in"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: spec-service
                port:
                  number: 9000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spec-health-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  # ingressClassName: nginx
  rules:
    - host: "health.durgasri.in"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: spec-service
                port:
                  number: 9000
